css/styles.css
/****************************************************
 *                Navigation bar                    *
 ****************************************************/
nav {
  background-color: #0000ff;
  /*opacity: 0.3;*/
  position: relative;
  top: 0;
}

nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

nav ul li {
  float: left;
  margin-left: 4%;
  width: auto;
}

nav ul li a {
  display: block;
  padding: 0.375em; 
  font-size: 1em;
  color: white;
  text-decoration: none;
  /*font-weight: bold;*/
  text-transform: uppercase;
  font-family: Arial, sans-serif;
}

/* Used as a diagnostic to find specifc px locations 
@media all and (max-width: 630px) and (min-width: 520px) {
  nav ul li a {
    display: block;
    padding: 0.375em;
    font-size: 1em;
    color: red;
    text-decoration: none;
    text-transform: uppercase;
    font-family: Arial, sans-serif;
  }
} */


nav ul li a:hover {
  background-color: #ccc;
  color: #000;
}

#patents ul {
  list-style-type: none;
}
/****************************************************
 *                index                             *
 ****************************************************/
body#index {
  /*background-color: #f4f4d7;*/
  background-color: #afc983;
}
img#picture {
  float: left;
  margin-right: 1.25em;
}

h1#name {
  text-align: center;
  /*max-width: 960px;*/
  font-family: 'Neuton', serif;
  font-size: 250%;
  margin-bottom: -0.8em;
}
h1#profession {
  text-align: center;
  /*max-width: 960px;*/
  font-family: 'Neuton', serif;
  font-size: 250%;
}

div#wrap-around {
  /*max-width: 960px;*/
  margin-left: 0.625em;
  font-family: 'Neuton', serif;
  font-size: 150%;
  width: 82%; 
}
h2#professional {
  text-align: left;
  font-size: 125%;
  margin-bottom: -0.625em;
}

h2#personal {
  text-align: left;
  font-size: 125%;
  margin-bottom: -0.625em;
}
  
div#wrap-around ul {
  margin-left: 1em;
  list-style-type: square;
}

/* The bullet list must stay together, so when the window gets too small
 * < 700px change margin-left to move the list under the picture.
 * This helps keep the bullet list more readable with small screens.
 * Move it even further to the left when the screen gets even smaller.
 */
@media all and (max-width: 630px) and (min-width: 520px) {
  div#wrap-around ul {
    margin-left: 3em;
  }
}

@media all and (max-width: 2000px) and (min-width: 630px) {
  div#wrap-around ul {
    margin-left: 10em;
  }
}

img#picture2 {
  clear: both;
  float: right;
  /*margin-right: 1.25em;*/
  margin-bottom: 1.25em;
}

img#picture3 {
  clear: both;
  float: right;
  /*margin-right: 1.25em;*/
}


/****************************************************
 *                resume                            *
 ****************************************************/
#resume-body {
  background-color: #b6cee2;
  /*background-color: #afc983;*/
  /*background-color: #f4f4d7;*/
}

div#personal-resume {
  max-width: 960px;
  font-family: 'Neuton', serif;
  position: relative;
  margin-left: 2%;
}

div#personal-resume h1 {
  font-size: 250%;
  text-align: center;
  margin-bottom: -0.5em;
}
  
div#personal-resume p, div#technology p {
  font-size: 140%;
  text-align: center;
}

div#career-profile {
  font-family: 'Neuton', serif;
  text-align: center;
  max-width: 960px;
  margin-left: 2%;
}
div#career-profile h2 {
  font-size: 200%;
  margin-bottom: -0.5em;
}

div#career-profile p {
  font-size: 140%;
}

#career-summary {
  font-family: 'Neuton', serif;
  max-width: 960px;
  margin-left: 2%;
}

div#career-summary h2 {
  font-size: 200%;
  text-align: center;
  margin-bottom: -0.5em;
}

div#career-summary ul li {
  text-align: left;
  font-size: 140%;
  list-style-type: square;
}

#work-experience {
  max-width: 960px;
  margin-left: 2%;
}

.odd {
  background-color: #c8daea;
  /*background-color: #e4e49b;*/
}

.even {
  background-color: #edf3f8;
  /*background-color: #efefc3;*/
}

div#work-experience h2 {
  font-family: 'Neuton', serif;
  font-size: 200%;
  text-align: center;
  max-width: 960px;
  margin-bottom: 0.1em;
}
#work-experience-table {
  width: 100%;
  max-width: 960px;
  table-layout: fixed;
  border-collapse:collapse;
}
.company-name {
  font-family: 'Neuton', serif;
  font-size: 160%;
  max-width: 960px;
  text-align: left;
  width: 100%;
}
.work-title {
  font-family: 'Neuton', serif;
  font-size: 160%;
  max-width: 960px;
  text-align: left;
  width: 50%;
}
.work-date {
  font-family: 'Neuton', serif;
  font-size: 160%;
  max-width: 960px;
  width: 50%;
  text-align: right;
}
.work-description {
  font-family: 'Neuton', serif;
  font-size: 140%;
  text-align: left;
  max-width: 960px;
}

.work-description ul {
  margin-top: -2px;
}

div#technology {
  font-family: 'Neuton', serif;
  text-align: left;
  max-width: 960px;
  margin-left: 2%;
}

div#education, div#patents {
  font-family: 'Neuton', serif;
  text-align: center;
  max-width: 960px;
  margin-left: 2%;
}

div#patents h2, div#education h2, div#technology h2 {
  font-size: 200%;
  text-align: center;
  margin-bottom: -0.5em;
}
div#patents ul li, div#education ul li {
  font-size: 140%;
  list-style-type: none;
}

/****************************************************
 *            nationalParksVisited                  *
 ****************************************************/

body#national-parks-body {
  background-color: #f0e68c;
}

div#national-parks {
  width: 960px;
}

div#national-parks h1 {
  font-family: 'Neuton', serif;
  font-size: 250%;
  text-align: center;
  margin-left: 4%;
}


#national-parks-table {
  border: 3px ridge black;
  text-align: center;
  width: 100%;
  max-width: 960px;
  border-collapse:collapse;
  /*margin: 0 auto;*/
  margin-left: 4%;
  margin-top: 50px;
  margin-bottom: 50px;
}

div#national-parks th {
  border: 7px ridge black;
  font-family: 'Neuton', sans-serif;
  font-size: 180%;
  background-color: #c88737;
  color: black;
}

div#national-parks td {
  border: 7px ridge black;
  font-family: 'Neuton', sans-serif;
  font-size: 140%;
  background-color: #deb887;
  color: black;
}


div#national-parks tr:hover td{
  background-color: #f0e68c; 
  color: black;
}

div#national-parks p {
  font-family: 'Neuton', sans-serif;
  font-size: 18px;
  text-align: center;
  color: black;
}

